@@ -1,3 +1,8 @@
+2008-03-11  Philippe Brochard  <hocwp@free.fr>
+
+	* clfswm-util.lisp (identify-key): Display the documentation
+	associated to keys when identifying a key.
+
 2008-03-10  Xavier Maillard  <xma@gnu.org>
 
 	* contrib/clfswm: Complete rewrite of the script. Detect error and
